feat: 사진-일기 연결 수정